[gd_scene load_steps=5 format=3 uid="uid://bko6inldlgf6x"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_fu5r6"]
[ext_resource type="Resource" uid="uid://sue4php4wwn2" path="res://scenes/entities/player/player_stats.tres" id="2_i5jsg"]
[ext_resource type="Texture2D" uid="uid://d1auh1il8my0j" path="res://asset_packs/superpowers/prehistoric-platformer/hud/health-bar-preview.png" id="3_bhb24"]
[ext_resource type="Texture2D" uid="uid://c0vyq5bnhp5f5" path="res://asset_packs/superpowers/prehistoric-platformer/hud/inventory-example.png" id="4_rnjsi"]

[node name="HUD" type="CanvasLayer"]
layer = 99
script = ExtResource("1_fu5r6")
player_stats = ExtResource("2_i5jsg")

[node name="LivesLabel" type="Label" parent="."]
offset_left = 70.0
offset_top = 28.0
offset_right = 280.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0.721569, 0.713726, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Health: 0"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 70.0
offset_top = 65.0
offset_right = 280.0
offset_bottom = 89.0
theme_override_colors/font_color = Color(0.721569, 0.713726, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Coins: 0"

[node name="RelicsLabel" type="Label" parent="."]
visible = false
offset_left = 69.0
offset_top = 99.0
offset_right = 297.0
offset_bottom = 123.0
theme_override_colors/font_color = Color(0.721569, 0.713726, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Relics: 0/0"

[node name="Health-bar-preview" type="Sprite2D" parent="."]
visible = false
position = Vector2(145, 64)
texture = ExtResource("3_bhb24")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -102.0
offset_right = 20.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0

[node name="Inventory-example" type="Sprite2D" parent="Control"]
texture = ExtResource("4_rnjsi")
